@@ -8,6 +8,7 @@ BUG: Ticket#671 - TActiveCustomValidator Callback Problem (Christophe)
 BUG: Ticket#679 - TActiveLabel can't be shown from inside TRepeater. TActiveRadioButton cant be unchecked (Christophe)
 BUG: Ticket#695 - ActiveTextBox filled in IE blocks other elements (Michael)
 BUG: Ticket#707 - TPropertyAccess sets property twice on object when using setters (Qiang)
+BUG: Ticket#718 - prop:ClientSide OnLoading don't work in Opera (Christophe)
 BUG: Ticket#719 - TAutoCompleter should not trigger Validation if CausesValidation=False (Christophe)
 BUG: Ticket#721 - TActiveCustomValidator + TValidationSummary problem (Christophe)
 BUG: Ticket#736 - Files never created in clientscript.php (Qiang)
